fix: prevent layout shift by always showing scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 body {
   @apply bg-green-200;
+  overflow-y: scroll;
 }
 
 @font-face {
